<resources>
    <string name="app_name">Daybook</string>
    <string name="question">How are you feeling today?</string>

    <string name="happy_text">Happy</string>
    <string name="anxious_text">Anxious</string>
    <string name="angry_text">Angry</string>
    <string name="demotivated_text">Demotivated</string>
    <string name="worthless_text">Worthless</string>
    <string name="sad_text">Sad</string>

    <string name="what_happened_question">What made you feel</string>
    <string name="show_result">Show Result</string>
    <string name="quit_app">Quit App</string>
    <string name="daybook">Daybook</string>
    <string name="this_is_test_heading">This is test heading</string>
    <string name="title_activity_all_status_display">AllStatusDisplay</string>
</resources>
